_cache/v0.18.1/automake/specs.md
---
title: "automake"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["1.16.5"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 6, "num_specs_by_stack": {"aws-isc": 2, "root": 6, "aws-ahug": 2, "aws-isc-aarch64": 2, "aws-ahug-aarch64": 2, "radiuss": 1, "build_systems": 1, "data-vis-sdk": 1, "tutorial": 2, "e4s": 1}}
spec_details: [{"hash": "mqp4s756vpfhc7opc57h6cf2dwl4mbvq", "compiler": "gcc@=7.3.1", "versions": ["1.16.5"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": [], "stacks": ["aws-isc", "root", "aws-ahug"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/automake-1.16.5/linux-amzn2-x86_64_v4-gcc-7.3.1-automake-1.16.5-mqp4s756vpfhc7opc57h6cf2dwl4mbvq.spack"}, {"hash": "dvbhmjh6ujf7zu4ivf3teugbtubzkss5", "compiler": "gcc@=7.3.1", "versions": ["1.16.5"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": [], "stacks": ["aws-isc-aarch64", "root", "aws-ahug-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/automake-1.16.5/linux-amzn2-graviton2-gcc-7.3.1-automake-1.16.5-dvbhmjh6ujf7zu4ivf3teugbtubzkss5.spack"}, {"hash": "6vk5ehdtjzgcvug6vuwh2mmkjhg2pn2z", "compiler": "gcc@=7.5.0", "versions": ["1.16.5"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": [], "stacks": ["radiuss", "build_systems", "data-vis-sdk", "tutorial", "root", "e4s"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/automake-1.16.5/linux-ubuntu18.04-x86_64-gcc-7.5.0-automake-1.16.5-6vk5ehdtjzgcvug6vuwh2mmkjhg2pn2z.spack"}, {"hash": "anp25ggvspwxvy6zi6skx27qpp4nclds", "compiler": "gcc@=7.3.1", "versions": ["1.16.5"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": [], "stacks": ["aws-isc-aarch64", "root", "aws-ahug-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/automake-1.16.5/linux-amzn2-aarch64-gcc-7.3.1-automake-1.16.5-anp25ggvspwxvy6zi6skx27qpp4nclds.spack"}, {"hash": "2uhimi737za5jxyk777d2f4dakpz3hh4", "compiler": "gcc@=7.3.1", "versions": ["1.16.5"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": [], "stacks": ["aws-isc", "root", "aws-ahug"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/automake-1.16.5/linux-amzn2-x86_64_v3-gcc-7.3.1-automake-1.16.5-2uhimi737za5jxyk777d2f4dakpz3hh4.spack"}, {"hash": "62t26ck3fvn4zfwfylsx3efqpyn5iqbz", "compiler": "gcc@=8.4.0", "versions": ["1.16.5"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": [], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/automake-1.16.5/linux-ubuntu18.04-x86_64-gcc-8.4.0-automake-1.16.5-62t26ck3fvn4zfwfylsx3efqpyn5iqbz.spack"}]
---